// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline/TrackContextMenu selected global track matches the snapshot of a global track 1`] = `
<nav
  class="react-contextmenu timeline-context-menu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show 
    "Content Process"
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show this process
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable checked"
      role="menuitem"
      tabindex="-1"
    >
      GeckoMain
    </div>
  </div>
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable checked"
      role="menuitem"
      tabindex="-1"
    >
      Content Process
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      DOM Worker
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      Style
    </div>
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu selected local track matches the snapshot of a local track 1`] = `
<nav
  class="react-contextmenu timeline-context-menu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show 
    "DOM Worker"
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable checked"
      role="menuitem"
      tabindex="-1"
    >
      GeckoMain
    </div>
  </div>
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable checked"
      role="menuitem"
      tabindex="-1"
    >
      Content Process
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      DOM Worker
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      Style
    </div>
  </div>
</nav>
`;
